crates/plotnik-tests/tests/06-vm/alternations_unlabeled/error_nullable_alternatives_have_incompatible_capture_types.txt
Q = (program
  [
    {
      (comment)? @comment
    } @value :: bool
    (identifier)? @value :: bool
  ]
)
--------------------- INPUT ----------------------
------------------ DIAGNOSTICS -------------------
error: `@value` has incompatible types `{ comment: Node | null }` and `Node | null` across alternatives
 --> query.ptk:5:7
  |
5 |     } @value :: bool
  |       ^^^^^^
6 |     (identifier)? @value :: bool
  |                   ------ `@value` has type `Node | null` here
  |
help: make every alternative produce the same type, or label the alternatives for a variant type
